--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<head>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="OTTIENI UN IPHONE GRATUITO 12">
+<meta property="og:description" content="SONO DISPONIBILI SOLO 85 IPHONE 12, AFFRETTATI">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+</head>
 <script language="javascript">
 <!--
 // == Begin Free HTML Source Code Obfuscation Protection from https://snapbuilder.com == //
